<resources>
    <string name="app_name">A6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="per_person">Per Person</string>
    <string name="split_bill">Split Bill?</string>
    <string name="initial_value">$0.00</string>
    <string name="initial_percent">15%</string>
    <string name="from">From: </string>
    <string name="to">To:</string>
    <string name="result">Result:</string>

</resources>
