 <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TipFragment">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount"
                android:id="@+id/textView" />
            <EditText
                android:id="@+id/billText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:layout_gravity="center"
                android:id="@+id/textView4"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_percent"
                android:layout_gravity="center|end"
                android:id="@+id/textViewPercentCount"
                android:layout_weight="1"/>
            <SeekBar
                android:id="@+id/seekBarPercent"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="30"
                android:progress="5"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:layout_gravity="center"
                android:id="@+id/textView5"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_value"
                android:layout_gravity="center|end"
                android:id="@+id/textViewTipCount"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_gravity="center"
                android:id="@+id/textView6"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_value"
                android:layout_gravity="center|end"
                android:id="@+id/textViewTotalCount"
                android:layout_weight="1"/>
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/linearLayout4"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split_bill"
                android:layout_gravity="center"
                android:id="@+id/textView3" />
            <Spinner
                android:id = "@+id/spinnerFish"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:entries = "@array/ways_to_split" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout5"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_person"
                android:layout_gravity="center"
                android:id="@+id/textView7"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_value"
                android:layout_gravity="center|end"
                android:id="@+id/textViewPerPersonCount"
                android:layout_weight="1"/>
        </LinearLayout>

 </RelativeLayout>
