 <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MoneyFragment">


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/moneyText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_gravity="center|start"
                android:id="@+id/textViewMoneyFrom" />
            <Spinner
                android:id = "@+id/spinnerFrom"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:entries = "@array/money_exchange"
                android:padding="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_gravity="center|start"
                android:id="@+id/textViewMoneyTo" />
            <Spinner
                android:id = "@+id/spinnerTo"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:entries = "@array/money_exchange" />

            <Button
                android:text="CONVERT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:id="@+id/buttonMoneyConvert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_gravity="center|start"
                android:id="@+id/textViewMoneyResult" />

        </LinearLayout>

 </RelativeLayout>

