<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnitFragment">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/unitText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:inputType="text" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_gravity="top|start"
                android:id="@+id/textViewMoneyFrom" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="@dimen/activity_horizontal_margin"
                android:id="@+id/radioFrom">
                <RadioButton
                    android:text="centimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonCM1"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="meters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonM1"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonFT1"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonMI1"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="kilometers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonKM1"
                    android:layout_weight="1" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_gravity="top|start"
                android:id="@+id/textViewMoneyTo" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/activity_horizontal_margin"
                android:id="@+id/radioTo">

                <RadioButton
                    android:text="centimeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonCM2"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="meters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonM2"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonFT2"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="miles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonMI2"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="kilometers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonKM2"
                    android:layout_weight="1" />
            </RadioGroup>


        </LinearLayout>




        <Button
            android:text="CONVERT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:id="@+id/buttonMoneyConvert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_gravity="center|start"
            android:id="@+id/textViewMoneyResult" />

    </LinearLayout>

</RelativeLayout>


